# ml-in-action

./: .bandit.ini  .gitignore  .pylintrc  README.md
beginner/ch02/: ua.ipynb
beginner/ch03/: data-pre-processing.ipynb
beginner/ch05/: RFM.ipynb
beginner/ch07/: LTV.ipynb
benchmark/: .mambarc
ch02/: ua.ipynb
ch03/: data-pre-processing.ipynb  flower-express.csv
ch05/: RFM.ipynb
ch07/: LTV.ipynb
day-day-up/: gfw.md  large-clusters-data-processing.md  ml-concepts.md  np.ipynb  ocr.ipynb  pd.ipynb  plot.ipynb  project-rules.md  pytorch.ipynb
day-day-up/ds/: iris.csv
elastic/: aggs.http  analyzer.http  elastic.md  mapping.http  query.http  query.md  suggest.http  test.http
first-ml-model/: README.md  docker-deploy.sh  setup.py
gene/: Makefile  correct.ipynb  html.yaml  metadata.yaml
gene/content/: book-00.md  book-01.md  book-02.md  book-03.md  book-04.md  book-05.md  book-06.md  book-07.md  book-08.md  book-09.md  book-10.md  book-11.md  book-12.md  book-13.md  book-14.md  book-15.md  book-16.md  book-17.md  book-18.md  book-19.md  book-20.md  book-21.md  book-22.md  book-23.md  book-24.md  book-25.md  book-26.md  book-27.md  book-28.md  book-29.md  book-30.md  book-31.md  book-32.md  book-33.md  book-34.md  book-35.md  book-36.md  book-37.md  book-38.md  book-39.md  (+20 more)
ml-model-serving/: .style.yapf  .style.yapf.bak  Dockerfile  Makefile  README.md  env-file-example  pyproject.toml  requirements.dev.txt  requirements.txt
ml-model-serving/app/: config.py  main.py
ml-model-serving/app/models/ml/: classifier.py  train.py
ml-model-serving/app/models/schemas/: iris.py
ml-model-serving/app/routes/: home.py
ml-model-serving/app/routes/v1/: iris.py
ml-model-serving/tests/: test_example.py  test_model_file.py
rate-limit/: api.ipynb  doc.md  new-api.ipynb  waf.ipynb
rate-limit/ds/get-all/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-all-exclude-favcount/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-all-live-events/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-bet-info/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-bet-list/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-bet-statement/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-favourite-events/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-favourite-events-count/: 2022-10-21.csv  2022-10-22.csv  2022-10-23.csv  2022-10-28.csv  2022-10-29.csv  2022-10-30.csv
rate-limit/ds/get-live-result/: 2022-10-21.csv  2022-10-22.csv  (+4 more)
rate-limit/retrieve/: package-lock.json  package.json  req-tmpl-must_not.json  req.json  retrieve-data.mjs
setup-for-apple-m-chip/: README.md  dario.py  finlab.yaml  ipywidgets-check.ipynb  mlab.yaml  svd.py
spark/: 00.md  01.md  02.md  03.md  04.md  05.md  06.md  07.md
spark/src/: 07.ipynb
tf/: 01.ipynb
torch/: 04-tensor.ipynb  06-torchvision.ipynb  09-cnn.ipynb  09.ipynb  10.ipynb  11-loss-function-optimizer.md  11-loss-function.md  14-practice.ipynb  14.ipynb  15-visualization.ipynb  README.md
torch/models/: linear_model.pth  linear_model_with_arc.pth
xinjing/: Makefile  html.yaml  metadata.yaml
xinjing/content/: i.md
xinjing/css/: my.css
(+30 files in other folders)
