[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
    "wheel"
]

[project]
name = "sklearn-fastapi"
version = "0.9.1"
authors = [{ name = "douhua", email = "hdouhua@gmail.com" }]
description = "machine learning model serving tempalte project with fastapi"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: ML Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
]
dependencies = [
    "scikit-learn",
    "fastapi",
    "uvicorn",
]

[tool.setuptools]
package-dir = {"" = "app"}

[tool.setuptools.package-data]
"*" = ["*.gz"]

[project.urls]
Home = "https://github.com/hdouhua/ml-in-action/tree/main/first-ml-model"
